--- a/angularfos/src/app/product-list/product-list.component.html
+++ b/angularfos/src/app/product-list/product-list.component.html
@@ -1,9 +1,16 @@
+<style>
+  a
+  {
+    text-decoration: none;
+    color:black
+  }
+</style>
 <h1 style="padding-top: 20px;padding-bottom: 20px;">Products</h1>
 
 <div *ngFor="let prod of products">
 
   <h3>
-    <a [title]="prod.name + ' details'">
+    <a [title]="prod.name + ' details'" [routerLink]="['/products', prod.id]">
       {{ prod.name }}
     </a>
   </h3>
