--- a/angularfos/src/app/top-bar/top-bar.component.html
+++ b/angularfos/src/app/top-bar/top-bar.component.html
@@ -21,4 +21,4 @@
     }
 </style>
 
-<div class="title bg-success"><a [routerLink]="['/']"><span class="h1">My Store</span></a><span class="btn text-success"><i class="fas fa-shopping-cart"></i> Checkout</span></div>
+<div class="title bg-success"><a [routerLink]="['/']"><span class="h1">My Store</span></a><span class="btn text-success" routerLink="/cart"><i class="fas fa-shopping-cart"></i> Checkout</span></div>
