--- a/angularfos/src/app/product-list/product-list.component.html
+++ b/angularfos/src/app/product-list/product-list.component.html
@@ -2,7 +2,7 @@
   a
   {
     text-decoration: none;
-    color:black
+    color:black;
   }
 </style>
 <h1 style="padding-top: 20px;padding-bottom: 20px;">Products</h1>
